# Blood-Cell-Detection-and-Classification

./: .gitignore
ProgettoIPA/: CMakeLists.txt  features_cellule_test.csv  features_cellule_test_BINARIO.csv
ProgettoIPA/myproject/: main-DESKTOP-D3FIDKF.cpp  main.cpp
ProgettoML/: 1A_modello_LABSP.py  1B_valutazione.py  1_addestramento_modello.py  2A_modello_SUP.py  2B_valutazione.py  2_valutazione.py  3A_XGBoost.py  3B_valutazione.py  MULTICLASSE.py  MULTICLASSE_SUP.py  VISIVO.py  VISIVO_SUP.py  addestramento_modello.py  addestramento_modello_2.py  color_view.py  confronto_feature_reali.py  confronto_feature_reali_1.py  csvfeatures_cellule_test.csv  csvfeatures_cellule_train.csv  features_cellule.csv  features_cellule_VALIDATE.csv  features_cellule_corretto_da_ML.csv  features_cellule_test.csv  features_cellule_train.csv  imputer_progetto.pkl  modello.py  modello_label_spreading.pkl  modello_multiclasse.py  modello_supervised.py  scaler_progetto.pkl  validazione_dati.py  valutazione.py  valutazione_3.py  verifica_unsupervised.py  visivo.py
ProgettoML/SEMI-SUPERVISED/: modello_binario.py
ProgettoML/altro/: color_view_hsv-DESKTOP-D3FIDKF.py  disegna_rettangoli_ann.py
ProgettoML/csv/: features_cellule_VALIDATE.csv  features_cellule_corretto_da_ML.csv  features_cellule_test.csv  features_cellule_test_BINARIO.csv  features_cellule_test_VALIDATE.csv  features_cellule_train.csv  features_cellule_train_BINARIO.csv  features_cellule_train_PURE.csv
ProgettoML/risultati/: predizioni_test.csv  report.txt
myproject/: CMakeLists.txt  main.cpp
(+6 files in other folders)
